# ScanOPS

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SCANOPS.md  DETECTION_GAPS_ANALYSIS.md  Dockerfile  Dockerfile.asset  Dockerfile.frontend  Dockerfile.m2  Dockerfile.m4  Dockerfile.m5  Dockerfile.m8  Dockerfile.orchestrator  Dockerfile.scanner  IMPLEMENTATION_US_3_1.md  README.md  README_SURFACE_SNAPSHOTS.md  REQUIREMENTS_OPENVAS.md  activos_hito1.json  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  cleanup_discovered.sql  code.txt  code_extractor.py  demo_scan.py  deploy.production.sh  docker-compose.production.yml  docker-compose.siem.yml  docker-compose.yml  docker-compose.yml.bak  install_dependencies.bat  install_dependencies.sh  logging.ini  nginx.conf  nginx.conf.simple  package.json  (+12 more)
.claude/: settings.json  settings.local.json
.claude/memory/: MEMORY.md  project_scanops_deployment.md
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial.py  001_initial_schema.py  002_add_bloqueada_status.py  002_asset_manager.py  003_fix_ip_partial_index.py  004_add_nombre_to_assets.py  005_add_m4_exploit_tables.py  006_add_vuln_findings_dedup_index.py  007_add_asset_audit_logs.py  008_add_recon_tables.py  009_add_m4_execution_columns.py  010_add_users_and_departments.py  011_add_edr_tables.py
config/beelzebub/: http-80.yaml  mysql-3306.yaml
docs/: ScanOPS_APIs_y_Herramientas_v2.4.1.docx  ScanOPS_Arquitectura_v2.4.1.docx  ScanOPS_Guia_Instalacion_v2.4.1.docx  generate_arch_doc.js  generate_install_doc.js  generate_tools_doc.js
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
output/: master_audit_report.json  tmp_hardening.json  tmp_health.json  tmp_network.json
scanops-dashboard/: package.json  pnpm-lock.yaml
scripts/: deploy-linux.md  m2_client.py  main_orchestrator.py  pre-deployment-checklist.md  test_orchestrator_docker.sh
services/: TROUBLESHOOTING.md  __init__.py
shared/: __init__.py  auth.py  auth_router.py  celery_app.py  config.py  database.py  scan_logger.py  user_router.py  utils.py  vault_client.py
src/: scan_logger.py  utils.py
tests/: conftest.py  test_auth.py  test_celery_schedule.py  test_m1_m2_m3.py  test_m3_complete.py  test_orchestrator.py  test_scanner_network.py  test_vulnerability_mapping.py
(+322 files in other folders)
